ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: ayurmart.com
    http:
      paths:
      - path: /userauth
        pathType: Prefix
        backend:
          service:
            name: userauth-service
            port:
              name: http
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              name: http
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              name: http
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              name: http
      - path: /coupon
        pathType: Prefix
        backend:
          service:
            name: coupon-service
            port:
              name: http
      - path: /seller
        pathType: Prefix
        backend:
          service:
            name: seller-service
            port:
              name: http
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              name: http
